--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "marked": "^14.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
