--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@popperjs/core": "^2.11.6",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.3",
+    "fabric": "^6.5.1",
     "font-awesome": "^4.7.0",
     "marked": "^14.1.2",
+    "ng2-canvas-whiteboard": "^7.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jsdom": "^21.1.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
