--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.6",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
     "font-awesome": "^4.7.0",
     "marked": "^14.1.2",
     "rxjs": "~7.8.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
